// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation CreateItem return the created item 1`] = `
Object {
  "data": Object {
    "CreateItem": Object {
      "name": "2046",
    },
  },
}
`;

exports[`Mutation CreateItem return the created item 2`] = `
Object {
  "name": "2046",
}
`;

exports[`Mutation CreateItem throw error if name is missing 1`] = `
Object {
  "data": Object {
    "CreateItem": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Item.name.],
  ],
}
`;

exports[`Mutation CreateUser return the created user 1`] = `
Object {
  "data": Object {
    "CreateUser": Object {
      "email": "jack.daniel@test.com",
      "name": "Jack Daniel",
    },
  },
}
`;

exports[`Mutation CreateUser throws error if email already existed 1`] = `
Object {
  "data": Object {
    "CreateUser": Object {
      "email": "john.cage@test.com",
      "name": "Jack Daniel",
    },
  },
}
`;

exports[`Mutation CreateUser throws error if email is missing 1`] = `
Object {
  "data": Object {
    "CreateUser": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field User.email.],
  ],
}
`;

exports[`Mutation DeleteItem return the deleted item 1`] = `
Object {
  "data": Object {
    "DeleteItem": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Item.id.],
  ],
}
`;

exports[`Mutation DeleteUser return the deleted user 1`] = `
Object {
  "data": Object {
    "DeleteUser": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field User.id.],
  ],
}
`;

exports[`Mutation UpdateItem return the updated item 1`] = `
Object {
  "data": Object {
    "UpdateItem": Object {
      "id": "4edd40c86762e0fb12000013",
      "name": "Working Class Hero",
    },
  },
}
`;

exports[`Mutation UpdateItem return the updated item 2`] = `
Object {
  "id": "4edd40c86762e0fb12000013",
  "name": "Working Class Hero",
}
`;

exports[`Mutation UpdateUser return the updated user 1`] = `
Object {
  "data": Object {
    "UpdateUser": Object {
      "id": "4edd40c86762e0fb12000004",
      "name": "John Lemon",
    },
  },
}
`;

exports[`Mutation UserDislikeItem return the updated user 1`] = `
Object {
  "data": Object {
    "UserDislikeItem": Object {
      "id": "4edd40c86762e0fb12000004",
      "likeItems": Array [],
      "name": "John Lennon",
    },
  },
}
`;

exports[`Mutation UserDislikeItem return the updated user 2`] = `Array []`;

exports[`Mutation UserFollowUser return the updated follower 1`] = `
Object {
  "data": Object {
    "UserFollowUser": Object {
      "followees": Array [
        Object {
          "name": "John Lennon",
        },
      ],
      "id": "4edd40c86762e0fb12000005",
      "name": "Miles Davis",
    },
  },
}
`;

exports[`Mutation UserFollowUser will not create duplicated follow connections 1`] = `
Array [
  Object {},
]
`;

exports[`Mutation UserLikeItem return the updated user 1`] = `
Object {
  "data": Object {
    "UserLikeItem": Object {
      "id": "4edd40c86762e0fb12000005",
      "likeItems": Array [
        Object {
          "name": "Imagine",
        },
      ],
      "name": "Miles Davis",
    },
  },
}
`;

exports[`Mutation UserLikeItem will not create duplicated like connections 1`] = `
Array [
  Object {},
]
`;

exports[`Mutation UserUnfollowUser return the updated follower 1`] = `
Object {
  "data": Object {
    "UserUnfollowUser": Object {
      "followees": Array [],
      "id": "4edd40c86762e0fb12000004",
      "name": "John Lennon",
    },
  },
}
`;

exports[`Mutation UserUnfollowUser return the updated follower 2`] = `
Array [
  Object {},
]
`;
